# pyradigms

./: .bumpversion.cfg  .coveragerc  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  paradigms.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: coverage.yml  lint.yml  publish-to-test-pypi.yml  python-package.yml  tests.yml
docs/: conf.py  demo.ipynb  index.rst  installation.rst  modules.rst  pyradigms.rst  requirements.txt
docs/source/: conf.py  index.rst
examples/: .~lock.latin_verbs.csv#  .~lock.mapudungun_verb_paradigms.csv#  .~lock.murrinhpatha_verb_entries.csv#  README.md  cariban_swadesh_entries.csv  example_output.csv  examples_metadata.json  examples_metadata.yaml  godie_pronouns.csv  icelandic_pronoun_paradigm.csv  latin_noun_entries_short.csv  latin_nouns.csv  latin_verbs.csv  latin_verbs_convert.py  mapudungun_verb_paradigms.csv  murrinhpatha_verb_entries.csv  petere_example_output.csv  portaːre_example_output.csv  pyradigms_example_run.py  terːeːre_example_output.csv
pyradigms/: __init__.py  generated_paradigms.csv
pyradigms.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: paradigm_to_relational.ipynb  paradigm_to_relational.md  paradigm_to_relational.py  paradigms_md.ipynb  paradigms_md.md
src/pyradigms/: __init__.py
tests/: conftest.py  test_composition.py  test_decomposition.py  test_roundtrip.py
tests/data/: abalieno.csv  andare.csv  entries_out.csv  italian_entries.csv  luto.csv  usurpo.csv
tests/data/venire/: entries.csv  long.csv  paradigm.csv
