[metadata]
name = pyradigms
version = 1.0.1
author = Florian Matter
author_email = florianmatter@gmail.com
description = Constructing and deconstructing linguistic paradigms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/florianmatter/pyradigms
project_urls =
    Bug Tracker = https://gitlab.com/florianmatter/pyradigms/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	pandas
	numpy

[options.packages.find]
where = src