[metadata]
name = pyradigms
version = 0.0.4
author = Florian Matter
author_email = florianmatter@gmail.com
description = Constructing and deconstructing linguistic paradigms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fmatter/pyradigms
project_urls =
    Bug Tracker = https://github.com/fmatter/pyradigms/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	pandas==1.2.3

[options.packages.find]
where = src