[metadata]
author = Florian Matter
author_email = florianmatter@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Text Processing :: Linguistic
description = Composing and decomposing linguistic paradigms.
keywords =
    linguistics
    paradigms
long_description = file: README.md
long_description_content_type = text/markdown
name = pyradigms
project_urls =
    Bug Tracker = https://github.com/fmatter/pyradigms/issues
url = https://github.com/fmatter/pyradigms
version = 0.0.6.dev

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    pandas>=1.1.5
    clldutils>=3.10.1
    attrs>=21.4.0

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
    flake8
    twine
    wheel

[options.packages.find]
include = pyradigms, pyradigms.*
where = src

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = pyradigms
src_paths = pyradigms,tests
line_length = 120

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov

[coverage:run]
source =
    pyradigms

[coverage:report]
show_missing = true
skip_covered = true